[package]
name = "yaanhyy-libp2p"
version = "0.1.0"
authors = ["yaanhyy <yaanhyy@gmail.com>"]
license = "Apache-2.0 OR MIT"
description = "secure connections"
keywords = ["network", "protocol"]
categories = ["network-programming"]
repository = "https://github.com/yaanhyy/yaanhyy-libp2p"
readme = "README.md"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secio = { package="yaanhyy-secio", rev = 'd0d4724978142ddf015da0e9bf91c4d251a4edfb', git = "https://github.com/yaanhyy/yaanhyy-secio.git"}
yamux = { package="yaanhyy-yamux", rev = 'e83b6996437035159ef4e20671ab94bd895b75a6', git = "https://github.com/yaanhyy/yaanhyy-yamux.git"}
multistream-select = { package = "yaanhyy-multistream-select", path = "misc/multistream-select" }

[workspace]
members = [
    "misc/multistream-select"
]