[package]
name = "yaanhyy-libp2p"
version = "0.1.0"
authors = ["yaanhyy <yaanhyy@gmail.com>"]
license = "Apache-2.0 OR MIT"
description = "secure connections"
keywords = ["network", "protocol"]
categories = ["network-programming"]
repository = "https://github.com/yaanhyy/yaanhyy-libp2p"
readme = "README.md"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multistream-select = { package = "yaanhyy-multistream-select", path = "misc/multistream-select" }
utils = { package = "utils", path = "utils" }
mdns = { package = "yaanhyy-mdns", path = "protocol/mdns" }
noise = { package = "yaanhyy-noise", path = "protocol/noise" }

[workspace]
members = [
    "misc/multistream-select",
    "utils",
    "protocol/mdns",
    "protocol/ping",
    "protocol/identity",
    "protocol/gossipsub",
    "protocol/noise",
    "protocol/kad",
    "misc/enr",
    "misc/discv5"
]