[package]
name = "yaanhyy-discv5"
version = "0.1.0"
authors = ["hyy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsecp256k1 = { version = "0.3.1" }
async-std = "1.0"
futures = "0.3.5"
futures-util = "0.3.5"
prost = "0.6.1"
utils = {path = "../../utils"}
secio = { package="yaanhyy-secio",  git = "https://github.com/yaanhyy/yaanhyy-secio.git"}
yamux = { package="yaanhyy-yamux",  git = "https://github.com/yaanhyy/yaanhyy-yamux.git"}
multistream-select = {package="yaanhyy-multistream-select", path="../../misc/multistream-select"}
identity = {package="yaanhyy-identity", path="../../protocol/identity"}
log = "0.4.8"
sha2 = "0.8.1"
base64 = "0.11.0"
unsigned-varint = { version = "0.3.0", features = ["futures-codec"] }
bytes = "0.5.4"
rand = "0.7.3"
smallvec = "1.0"
multihash = "0.11.0"
multiaddr = { package = "parity-multiaddr", version = "0.9.0"}
hex = "*"
rlp = "0.4.3"
enr = { version = "0.1.0", features = ["libsecp256k1", "ed25519"] }
digest = "0.8.1"
openssl = "0.10.29"
zeroize = { version = "1.1.0", features = ["zeroize_derive"] }
hkdf = "0.8.0"
hex-literal = "0.2.1"

[dev-dependencies]
quickcheck = "0.9.0"
env_logger = "0.6.1"
simple_logger = "1.3.0"
tokio = "0.1.22"
rand_xorshift = "0.2.0"
rand_core = "0.5.1"
