[package]
name = "yaanhyy-enr"
version = "0.1.0"
authors = ["hyy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enr = { version = "*", features = ["serde", "ed25519", "rust-secp256k1"] }
base64 = "0.12.0"
bs58 = "0.3.0"
hex = "0.4.2"
log = "0.4.8"
rand = "0.7.3"
rlp = "0.4.4"
sha3 = "0.8.2"
zeroize = "1.1.0"
libsecp256k1 = { version = "0.3.1", optional = true }
serde = { version = "*", optional = true }
ed25519-dalek = { version = "1.0.0-pre.3"}