[package]
name = "yaanhyy-multistream-select"
version = "0.1.0"
authors = ["hyy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.0"
futures = "0.3.5"
futures-util = "0.3.5"
utils = {path = "../../utils"}
secio = { package="yaanhyy-secio", rev = '16421be27a37337526110c7f739b1c91d8414988', git = "https://github.com/yaanhyy/yaanhyy-secio.git"}
yamux = { package="yaanhyy-yamux", rev = '83ef900e6948596ba923cab3b222306b0dc0cb13', git = "https://github.com/yaanhyy/yaanhyy-yamux.git"}
