[package]
name = "yaanhyy-multistream-select"
version = "0.1.0"
authors = ["hyy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.0"
futures = "0.3.5"
futures-util = "0.3.5"
utils = {path = "../../utils"}
secio = { package="yaanhyy-secio", rev = '2547ba1fd9b9d392abe28f81a5285e4f5b2502ce', git = "https://github.com/yaanhyy/yaanhyy-secio.git"}
yamux = { package="yaanhyy-yamux", rev = '8c0578e6dcf0797d276ccfc3aee2c0c9f95b4dc7', git = "https://github.com/yaanhyy/yaanhyy-yamux.git"}
