[package]
name = "yaanhyy-gossipsub"
version = "0.1.0"
authors = ["hyy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.0"
futures = "0.3.5"
futures-util = "0.3.5"
prost = "0.6.1"
utils = {path = "../../utils"}
secio = { package="yaanhyy-secio", rev = '2547ba1fd9b9d392abe28f81a5285e4f5b2502ce', git = "https://github.com/yaanhyy/yaanhyy-secio.git"}
yamux = { package="yaanhyy-yamux", rev = '8c0578e6dcf0797d276ccfc3aee2c0c9f95b4dc7', git = "https://github.com/yaanhyy/yaanhyy-yamux.git"}
multistream-select = {package="yaanhyy-multistream-select", path="../../misc/multistream-select"}
identity = {package="yaanhyy-identity", path="../identity"}
parity-multiaddr = "0.9.0"
log = "0.4.8"
sha2 = "0.8.1"
base64 = "0.11.0"
unsigned-varint = { version = "0.3.0", features = ["futures-codec"] }
bytes = "0.5.4"
rand = "0.7.3"
target_info = "0.1.0"
serde = "1.0.110"
serde_derive = "1.0.110"
hex = "*"