[package]
name = "yaanhyy-identity"
version = "0.1.0"
authors = ["hyy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.0"
futures = "0.3.5"
futures-util = "0.3.5"
prost = "0.6.1"
utils = {path = "../../utils"}
secio = { package="yaanhyy-secio",  git = "https://github.com/yaanhyy/yaanhyy-secio.git"}
yamux = { package="yaanhyy-yamux",  git = "https://github.com/yaanhyy/yaanhyy-yamux.git"}
multistream-select = {package="yaanhyy-multistream-select", path="../../misc/multistream-select"}
parity-multiaddr = "0.9.0"

[build-dependencies]
prost-build = "0.6"