[package]
name = "yaanhyy-kad"
version = "0.1.0"
authors = ["hyy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.0"
futures = "0.3.5"
futures-util = "0.3.5"
prost = "0.6.1"
utils = {path = "../../utils"}
secio = { package="yaanhyy-secio",  git = "https://github.com/yaanhyy/yaanhyy-secio.git"}
yamux = { package="yaanhyy-yamux", rev = 'dad5e6e2fdcec9b45a57d86e2f2cf0c0d9e4cf47', git = "https://github.com/yaanhyy/yaanhyy-yamux.git"}
multistream-select = {package="yaanhyy-multistream-select", path="../../misc/multistream-select"}
identity = {package="yaanhyy-identity", path="../identity"}
parity-multiaddr = "0.9.0"
log = "0.4.8"
sha2 = "0.8.1"
base64 = "0.11.0"
unsigned-varint = { version = "0.3.0", features = ["futures-codec"] }
bytes = "0.5.4"
rand = "0.7.3"
smallvec = "1.0"
multihash = "0.11.0"
hex = "*"
[build-dependencies]
prost-build = "0.6"