[package]
name = "yaanhyy-mdns"
version = "0.1.0"
authors = ["hyy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.0"
futures = "0.3.5"
net2 = "0.2"
dns-parser = "0.8"
lazy_static = "1.2"
secio = { package="yaanhyy-secio", rev = '1a2aeff0358c9e6e6cb79730a75233aa4209a425', git = "https://github.com/yaanhyy/yaanhyy-secio.git"}
parity-multiaddr = "0.9.0"