[package]
name = "yaanhyy-noise"
version = "0.1.0"
authors = ["hyy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.0"
futures = "0.3.5"
futures-util = "0.3.5"
prost = "0.6.1"
utils = {path = "../../utils"}
multistream-select = {package="yaanhyy-multistream-select", path="../../misc/multistream-select"}
parity-multiaddr = "0.9.0"
secio = { package="yaanhyy-secio",  git = "https://github.com/yaanhyy/yaanhyy-secio.git"}
x25519-dalek = "0.6.0"
curve25519-dalek = "2.0.0"
#snow = { version = "0.6.1", features = ["ring-resolver"], default-features = false }
zeroize = "1"
sha2 = "0.8.0"
rand = "0.7.3"
static_assertions = "1"
log = "0.4"
lazy_static = "1.2"

[dev-dependencies]
quickcheck = "0.9.0"
sodiumoxide = "^0.2.5"